--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,12 @@
 	      <artifactId>spring-boot-starter-data-jpa</artifactId>
 	    </dependency>
 	
-	    <dependency>
+	   <!-- <dependency>
 	      <groupId>com.h2database</groupId>
 	      <artifactId>h2</artifactId>
 	      <scope>runtime</scope>
 	    </dependency>
+	    -->
 	    
 	    <dependency>
 	      <groupId>com.microsoft.sqlserver</groupId>
