--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,30 @@
 # Faz com que o JSON devolvido fique identado
 spring.jackson.serialization.indent-output=true
 
+#Indica que o banco de dados ficara nessa pasta
+#spring.datasource.url=jdbc:h2:file:Z:/cruddb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=123456
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialec
 
-#Indica que o banco de dados ficará nessa pasta
-spring.datasource.url=jdbc:h2:file:Z:/cruddb
-spring.datasource.driverClassName=org.h2.Driver
+#Indica que as tabelas serao criadas caso nao existam ou caso tenham sua estrutura alterada
+#spring.jpa.hibernate.ddl-auto= update
+#Para mostrar as consultas no console
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+
+
+
+
+#Configuracao SQL Server 
+
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=cruddb;encrypt=true;trustServerCertificate=true;
+#spring.datasurce.url=jdbc:sqlserver://localhost;databaseName=cruddb;
 spring.datasource.username=sa
-spring.datasource.password=123456
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialec
-
+spring.datasource.password=@ITB123456
+spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 
 #Indica que as tabelas serao criadas caso nao existam ou caso tenham sua estrutura alterada
 spring.jpa.hibernate.ddl-auto= update
